--- a/Splash.html
+++ b/Splash.html
@@ -39,7 +39,7 @@
 			font-size: 20px;
             width: 256px;
             height: 180px;
-            background-image: url(Loader.gif);
+            background-image: url("Loader.gif")
             
             margin-top : 2px;
 			margin: auto;
@@ -63,7 +63,7 @@
         <ul>
             <li>Parham Golmohammadi</li>
             <li>Mikael Ahmad</li>
-            <li>Erild Kendrik</li>
+            <li>Erild Kondi</li>
             <li>Kikkie</li>
         </ul>
     </div>
@@ -85,6 +85,6 @@
     }
 		countDown();
      </script>
-    <meta http-equiv="refresh" content="5;url=https://intranet.ecs.westminster.ac.uk/modules/4COSC011W/js3.html">
+    <meta http-equiv="refresh" content="5; url = Home.html">
 </body>
 </html>
